@@ -271,7 +271,7 @@
 <li><a href="ref-with-changing-dimension-values.html"><font color="#000000">with-changing-dimension-values</font></a></li>
 <li><a href="ref-link-entities.html">Links</a>
 <ul>
-<li><a href="ref-check-link-consistency.html"><font color="#000000">check-link-consistency</font></a></li>
+<li><a href="ref-check-link-definitions.html"><font color="#000000">check-link-definitions</font></a></li>
 <li><a href="ref-direct-link-definition.html"><font color="#000000">direct-link-definition</font></a></li>
 <li><a href="ref-effective-link-definition.html"><font color="#000000">effective-link-definition</font></a></li>
 <li><a href="ref-linkf.html"><font color="#000000">linkf</font></a></li>
