@@ -12,7 +12,7 @@
 </head>
 <body>
 <table width="100%" cellpadding="0" cellspacing="2"><tr>
-<td bgcolor="#99ccff"><a href="ref-check-link-consistency.html"><img border="0" alt="check-link-consistency" src="previous.png"/></a></td><td bgcolor="#99ccff"><a href="ref-link-entities.html"><img border="0" alt="Links" src="up.png"/></a></td><td bgcolor="#99ccff"><a href="ref-effective-link-definition.html"><img border="0" alt="effective-link-definition" src="next.png"/></a></td><td align="center" bgcolor="#99ccff" width="100%"><b><font color="#000000">direct-link-definition</font></b></td><td bgcolor="#99ccff"><a target="_top" href="reference.html"><img border="0" alt="GoTo Top" src="top.png"/></a></td></tr></table>
+<td bgcolor="#99ccff"><a href="ref-check-link-definitions.html"><img border="0" alt="check-link-definitions" src="previous.png"/></a></td><td bgcolor="#99ccff"><a href="ref-link-entities.html"><img border="0" alt="Links" src="up.png"/></a></td><td bgcolor="#99ccff"><a href="ref-effective-link-definition.html"><img border="0" alt="effective-link-definition" src="next.png"/></a></td><td align="center" bgcolor="#99ccff" width="100%"><b><font color="#000000">direct-link-definition</font></b></td><td bgcolor="#99ccff"><a target="_top" href="reference.html"><img border="0" alt="GoTo Top" src="top.png"/></a></td></tr></table>
 
 <p><table class="tight" width="100%">
 <tr valign="top"><td valign="baseline" align="left"%>
@@ -36,4 +36,4 @@ created by <b><a href="ref-define-unit-class.html">define-unit-class</a></b>.
 <hr /><address><a target="_top" class="address"
     href="http://GBBopen.org/"><p>The GBBopen Project</a></address><br />
 <table width="100%" cellpadding="0" cellspacing="2"><tr>
-<td bgcolor="#99ccff"><a href="ref-check-link-consistency.html"><img border="0" alt="check-link-consistency" src="previous.png"/></a></td><td bgcolor="#99ccff"><a href="ref-link-entities.html"><img border="0" alt="Links" src="up.png"/></a></td><td bgcolor="#99ccff"><a href="ref-effective-link-definition.html"><img border="0" alt="effective-link-definition" src="next.png"/></a></td><td align="center" bgcolor="#99ccff" width="100%"><b><font color="#000000">direct-link-definition</font></b></td><td bgcolor="#99ccff"><a target="_top" href="reference.html"><img border="0" alt="GoTo Top" src="top.png"/></a></td></tr></table></body></html>
+<td bgcolor="#99ccff"><a href="ref-check-link-definitions.html"><img border="0" alt="check-link-definitions" src="previous.png"/></a></td><td bgcolor="#99ccff"><a href="ref-link-entities.html"><img border="0" alt="Links" src="up.png"/></a></td><td bgcolor="#99ccff"><a href="ref-effective-link-definition.html"><img border="0" alt="effective-link-definition" src="next.png"/></a></td><td align="center" bgcolor="#99ccff" width="100%"><b><font color="#000000">direct-link-definition</font></b></td><td bgcolor="#99ccff"><a target="_top" href="reference.html"><img border="0" alt="GoTo Top" src="top.png"/></a></td></tr></table></body></html>
