@@ -36,6 +36,6 @@
 <li><a href="tutorial-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 7, 2008</nobr>
-<nobr>4:53&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 30, 2008</nobr>
+<nobr>9:33&nbsp;EDT</nobr></address><br />
 </body></html>
